# PetriDishColonyCounter

./: CMakeLists.txt  README.md  run.sh
src/: CMakeLists.txt  stream.cpp  webcam.cpp
src/AmmClient/: jpegMultipartStream.h  test.c
src/PetriDishCounter/: CMakeLists.txt  PetriDishCounter.cbp  PetriDishCounter.depend  PetriDishCounterApp.cpp  PetriDishCounterApp.h  PetriDishCounterMain.cpp  PetriDishCounterMain.h  SelectNetworkDevice.cpp  SelectNetworkDevice.h  cv.cpp  cv.h
src/PetriDishCounter/wxsmith/: PetriDishCounterframe.wxs  SelectNetworkDevice.wxs
src/python/: WebStream.py
